Fri Aug 25 23:44:48 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.h (pinfo): Un-inline release.
	* pinfo.cc (pinfo::release): Move here from pinfo.h.
	* sigproc.cc (proc_terminate): Remove bogus 'pinfo child' which caused
	strange destruction of random regions of memory when destructor was
	invoked.

Fri Aug 25 21:25:32 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move set_os_type.
	(_dll_crt0): To here.
	(cygwin_dll_init): And here.
	* external.cc (fillout_pinfo): Use more foolproof method for scanning
	for pids.
	* pinfo.cc (set_myself): Eliminate myself_identity.init.
	* sigproc.cc (wait_sig): Do it here instead to reduce the amount of
	time where there could potentially be two processes with the same pid.
	* spawn.cc (spawn_guts): Eliminate duplicate initialization.
	* include/sys/cygwin.h: Mark unused PID_* elements.

Fri Aug 25 21:49:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* exec.cc (_execve): Change definition according to declaration in
	newlib/libc/include/sys/unistd.h.

Thu Aug 24 22:17:19 2000  Christopher Faylor <cgf@cygnus.com>

	* external.cc (cygwin_internal): Add CW_INIT_EXCEPTIONS to allow cygwin
	exception handling on threads not created by cygwin.
	* sigproc.cc (proc_terminate): Don't release pinfo structs since we are
	exiting.
	* include/sys/cygwin.h: Add CW_INIT_EXCEPTIONS.

Thu Aug 24 17:16:14 2000  Christopher Faylor <cgf@cygnus.com>

	* select.cc (cygwin_select): Correct logic for "always_ready" fds or
	when there is no wait specified.
	* syslog.cc (pass_handler::set_message): Zero the buffer prior to
	setting it.

2000-08-24  Egor Duda  <deo@logos-m.ru>

	* include/cygwin/core_dump.h: New file, contains structures used in
	cygwin core core files.
	* include/sys/procfs.h: New file, needed to autoconfigure cygwin core
	dumps support in bfd.

Thu Aug 24 13:50:15 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (parse_thing): nobinmode should force O_TEXT.